[gd_scene load_steps=19 format=3 uid="uid://dpcjs8y85sqcx"]

[ext_resource type="Script" uid="uid://c206gm4sgccgq" path="res://ARCHA UI/ARCHA UI.gd" id="1_u0x60"]
[ext_resource type="PackedScene" uid="uid://by8y28j7o1jgo" path="res://ARCHA UI/Branches/Splatool/Splatool.tscn" id="2_1a2xd"]
[ext_resource type="Theme" uid="uid://cugeo3fe26ndv" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon theme.tres" id="3_4j3c3"]
[ext_resource type="PackedScene" uid="uid://dtxutcsxu8p2h" path="res://ARCHA UI/Content panel display styles/ARCHA text field.tscn" id="3_u0x60"]
[ext_resource type="Texture2D" uid="uid://contv5h4j2vjt" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Angle Shooter.png" id="5_jrxue"]
[ext_resource type="Texture2D" uid="uid://0cbmtbh4f8c1" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Autobomb.png" id="6_0p0xr"]
[ext_resource type="Texture2D" uid="uid://67vmn5bon5se" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Burst.png" id="7_jq0he"]
[ext_resource type="Texture2D" uid="uid://m2f6v5stx3y4" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Curling.png" id="8_2pemx"]
[ext_resource type="Texture2D" uid="uid://dqgis71im0cc2" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Fizzy.png" id="9_08mi2"]
[ext_resource type="Texture2D" uid="uid://bsof27crq5tt8" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Ink Mine.png" id="10_6hsel"]
[ext_resource type="Texture2D" uid="uid://b5ii0pa2r3p1q" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Point Sensor.png" id="11_qyd6s"]
[ext_resource type="Texture2D" uid="uid://tdnjx08y4uyc" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Splash Wall.png" id="12_bws2u"]
[ext_resource type="Texture2D" uid="uid://ddgf1eow2afme" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Splat Bomb.png" id="13_v0873"]
[ext_resource type="Texture2D" uid="uid://bmqcdlxlw6x0h" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Sprinkler.png" id="14_uxxow"]
[ext_resource type="Texture2D" uid="uid://pxtsl7jolgsc" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Beakon.png" id="15_hmmmt"]
[ext_resource type="Texture2D" uid="uid://3pod7ttectud" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Suction.png" id="16_4vrbp"]
[ext_resource type="Texture2D" uid="uid://d0ipov1tka3ft" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Torpedo.png" id="17_ibyyn"]
[ext_resource type="Texture2D" uid="uid://dl17r8p7bwlay" path="res://ARCHA UI/Branches/Splatool/resources/Splatoon icons/Toxic Mist.png" id="18_xn830"]

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_u0x60")
metadata/_edit_use_anchors_ = true

[node name="Imported modules" type="Node" parent="."]

[node name="Splatool" parent="Imported modules" instance=ExtResource("2_1a2xd")]

[node name="UI Root" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="UI Root"]
layout_mode = 2

[node name="Top bar" type="PanelContainer" parent="UI Root/VBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="UI Root/VBox/Top bar"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="UI Root/VBox/Top bar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
bbcode_enabled = true
text = "[center][b]ARCHA"
fit_content = true

[node name="Branches" type="TabBar" parent="UI Root/VBox/Top bar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
tab_count = 3
tab_0/title = "Splatool"
tab_1/title = "Triforce playlists"
tab_2/title = "Some other useful app TBD"

[node name="Main section" type="HSplitContainer" parent="UI Root/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Content panel" type="PanelContainer" parent="UI Root/VBox/Main section"]
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
size_flags_horizontal = 3

[node name="Scroll" type="ScrollContainer" parent="UI Root/VBox/Main section/Content panel"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="UI Root/VBox/Main section/Content panel/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ARCHA print" parent="UI Root/VBox/Main section/Content panel/Scroll/Margin" instance=ExtResource("3_u0x60")]
layout_mode = 2

[node name="Side panel" type="PanelContainer" parent="UI Root/VBox/Main section"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="UI Root/VBox/Main section/Side panel"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="UI Root/VBox/Main section/Side panel/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="UI Root/VBox/Main section/Side panel/Scroll/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Refresh button" type="Button" parent="UI Root/VBox/Main section/Side panel/Scroll/Margin/VBox"]
layout_mode = 2
text = "Refresh results"

[node name="Auto refresh toggle" type="CheckButton" parent="UI Root/VBox/Main section/Side panel/Scroll/Margin/VBox"]
layout_mode = 2
text = "Auto refresh"

[node name="Sub weapon drop down" type="OptionButton" parent="UI Root/VBox/Main section/Side panel/Scroll/Margin/VBox"]
layout_mode = 2
theme = ExtResource("3_4j3c3")
selected = 0
allow_reselect = true
item_count = 14
popup/item_0/text = "Angle Shooter"
popup/item_0/icon = ExtResource("5_jrxue")
popup/item_0/id = 0
popup/item_1/text = "Autobomb"
popup/item_1/icon = ExtResource("6_0p0xr")
popup/item_1/id = 1
popup/item_2/text = "Burst Bomb"
popup/item_2/icon = ExtResource("7_jq0he")
popup/item_2/id = 2
popup/item_3/text = "Curling Bomb"
popup/item_3/icon = ExtResource("8_2pemx")
popup/item_3/id = 3
popup/item_4/text = "Fizzy Bomb"
popup/item_4/icon = ExtResource("9_08mi2")
popup/item_4/id = 4
popup/item_5/text = "Ink Mine"
popup/item_5/icon = ExtResource("10_6hsel")
popup/item_5/id = 5
popup/item_6/text = "Point Sensor"
popup/item_6/icon = ExtResource("11_qyd6s")
popup/item_6/id = 6
popup/item_7/text = "Splash Wall"
popup/item_7/icon = ExtResource("12_bws2u")
popup/item_7/id = 7
popup/item_8/text = "Splat Bomb"
popup/item_8/icon = ExtResource("13_v0873")
popup/item_8/id = 8
popup/item_9/text = "Sprikler"
popup/item_9/icon = ExtResource("14_uxxow")
popup/item_9/id = 9
popup/item_10/text = "Squid Beakon"
popup/item_10/icon = ExtResource("15_hmmmt")
popup/item_10/id = 10
popup/item_11/text = "Suction Bomb"
popup/item_11/icon = ExtResource("16_4vrbp")
popup/item_11/id = 11
popup/item_12/text = "Torpedo"
popup/item_12/icon = ExtResource("17_ibyyn")
popup/item_12/id = 12
popup/item_13/text = "Toxic Mist"
popup/item_13/icon = ExtResource("18_xn830")
popup/item_13/id = 13

[node name="Decimal precision" type="VBoxContainer" parent="UI Root/VBox/Main section/Side panel/Scroll/Margin/VBox"]
layout_mode = 2

[node name="Text" type="RichTextLabel" parent="UI Root/VBox/Main section/Side panel/Scroll/Margin/VBox/Decimal precision"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_4j3c3")
text = "Decimal precision"
fit_content = true

[node name="Slider" type="HSlider" parent="UI Root/VBox/Main section/Side panel/Scroll/Margin/VBox/Decimal precision"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
value = 3.0

[node name="Status bar" type="Panel" parent="UI Root/VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[connection signal="pressed" from="UI Root/VBox/Main section/Side panel/Scroll/Margin/VBox/Refresh button" to="." method="_on_refresh_button_pressed"]
[connection signal="toggled" from="UI Root/VBox/Main section/Side panel/Scroll/Margin/VBox/Auto refresh toggle" to="." method="_on_auto_reload_toggle_toggled"]
[connection signal="item_selected" from="UI Root/VBox/Main section/Side panel/Scroll/Margin/VBox/Sub weapon drop down" to="." method="_on_sub_selector_item_selected"]
[connection signal="value_changed" from="UI Root/VBox/Main section/Side panel/Scroll/Margin/VBox/Decimal precision/Slider" to="." method="_on_decimal_precision_value_changed"]
